<resources>

    <string name="app_name">Smart Parking</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? <b><u>Sign up now!</u></b></string>
    <string name="btn_link_to_login">Already registered? <b><u>Login Me!</u></b></string>
    <string name="welcome">Welcome</string>
    <string name="btnMenu">Select Destination</string>
    <string name="name">Fullname</string>
    <string name="google_map_key">AIzaSyAi_qtsqYbZzMFYV8FYyk2YKa_j8CbAi7M</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>

</resources>
